--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -443,6 +443,10 @@
     <Compile Include="Migrations\201612061904083_ListPaging.Designer.cs">
       <DependentUpon>201612061904083_ListPaging.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701121659419_PictureSize.cs" />
+    <Compile Include="Migrations\201701121659419_PictureSize.Designer.cs">
+      <DependentUpon>201701121659419_PictureSize.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -812,6 +816,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612061904083_ListPaging.resx">
       <DependentUpon>201612061904083_ListPaging.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701121659419_PictureSize.resx">
+      <DependentUpon>201701121659419_PictureSize.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
