Theming: replaced blueimp gallery with PhotoSwipe

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -972,26 +972,35 @@
     <Content Include="Themes\Alpha\Content\css\smartstore.smartgallery.css" />
     <Content Include="Themes\Alpha\Content\bs4\js\bootstrap.js" />
     <Content Include="Themes\Alpha\Content\bs4\js\bootstrap.min.js" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\scss\smart-gallery.scss" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\scss\_blueimp-gallery-custom.scss" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\scss\_blueimp-gallery-indicators.scss" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\scss\_blueimp-gallery-video.scss" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\scss\_blueimp-gallery.scss" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\scss\_main.scss" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\img\error.png" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\img\error.svg" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\img\loading.gif" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\img\play-pause.png" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\img\play-pause.svg" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\img\video-play.png" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\img\video-play.svg" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\js\blueimp-gallery-fullscreen.js" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\js\blueimp-gallery-indicator.js" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\js\blueimp-gallery-video.js" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\js\blueimp-gallery-vimeo.js" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\js\blueimp-gallery-youtube.js" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\js\blueimp-gallery.js" />
-    <Content Include="Themes\Alpha\Content\smart-gallery\js\smartstore.smart-gallery.js" />
+    <None Include="Themes\Alpha\Content\photoswipe\LICENSE" />
+    <None Include="Themes\Alpha\Content\drift\LICENSE" />
+    <Content Include="Themes\Alpha\Content\photoswipe\img\default-skin.png" />
+    <Content Include="Themes\Alpha\Content\photoswipe\img\default-skin.svg" />
+    <Content Include="Themes\Alpha\Content\photoswipe\img\preloader.gif" />
+    <Content Include="Themes\Alpha\Content\photoswipe\photoswipe-ui-default.js" />
+    <Content Include="Themes\Alpha\Content\photoswipe\photoswipe-ui-default.min.js" />
+    <Content Include="Themes\Alpha\Content\photoswipe\photoswipe.js" />
+    <Content Include="Themes\Alpha\Content\photoswipe\photoswipe.min.js" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\scss\smart-gallery.scss" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\scss\_blueimp-gallery-custom.scss" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\scss\_blueimp-gallery-indicators.scss" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\scss\_blueimp-gallery-video.scss" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\scss\_blueimp-gallery.scss" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\scss\_main.scss" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\img\error.png" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\img\error.svg" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\img\loading.gif" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\img\play-pause.png" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\img\play-pause.svg" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\img\video-play.png" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\img\video-play.svg" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\js\blueimp-gallery-fullscreen.js" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\js\blueimp-gallery-indicator.js" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\js\blueimp-gallery-video.js" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\js\blueimp-gallery-vimeo.js" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\js\blueimp-gallery-youtube.js" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\js\blueimp-gallery.js" />
+    <Content Include="Themes\Alpha\Content\____smart-gallery\js\smartstore.smart-gallery.js" />
     <Content Include="Themes\Alpha\Content\images\ajax_loader_small.gif" />
     <Content Include="Themes\Alpha\Content\images\color-overlay.png" />
     <Content Include="Themes\Alpha\Content\images\deliv-bg-aero.png" />
@@ -1444,8 +1453,8 @@
     <Content Include="Themes\AlphaOld\Content\images\ajax_loader_small.gif" />
     <Content Include="Themes\AlphaOld\Content\images\loading.gif" />
     <Content Include="Themes\AlphaOld\preview.png" />
-    <Content Include="Themes\Alpha\Scripts\Drift.min.js" />
-    <Content Include="Themes\Alpha\Scripts\Drift.js" />
+    <Content Include="Themes\Alpha\Content\drift\Drift.min.js" />
+    <Content Include="Themes\Alpha\Content\drift\Drift.js" />
     <Content Include="Themes\Alpha\Scripts\hammer.js" />
     <Content Include="Themes\Alpha\Scripts\jquery.addeasing.js" />
     <Content Include="Themes\Alpha\Scripts\jquery.ba-outside-events.js" />
@@ -1480,6 +1489,7 @@
     <Content Include="Themes\Alpha\Scripts\smartstore.megamenu.js" />
     <Content Include="Themes\Alpha\Scripts\smartstore.keynav.js" />
     <Content Include="Themes\Alpha\Scripts\smartstore.selectwrapper.js" />
+    <Content Include="Themes\Alpha\Scripts\smartstore.gallery.js" />
     <Content Include="Themes\Alpha\Scripts\smartstore.smartgallery.js" />
     <Content Include="Themes\Alpha\Scripts\smartstore.system.js" />
     <Content Include="Themes\Alpha\Scripts\smartstore.throbber.js" />
@@ -1913,6 +1923,10 @@
     <Content Include="Views\Product\Partials\Product.Info.cshtml" />
     <Content Include="Views\Product\Partials\Product.SideBar.cshtml" />
     <Content Include="Themes\Alpha\Content\_drift-theme.scss" />
+    <Content Include="Themes\Alpha\Content\_photoswipe-theme.scss" />
+    <Content Include="Themes\Alpha\Content\photoswipe\photoswipe.scss" />
+    <Content Include="Themes\Alpha\Content\photoswipe\_main-settings.scss" />
+    <Content Include="Themes\Alpha\Content\_gallery.scss" />
     <None Include="Web.EFMigrations.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
