Theming: HtmlTailRenderer, responsive tabs, oddcanvas tweaks, qty input, reviews & lots of other stuff

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -230,6 +230,7 @@
     </Compile>
     <Compile Include="Controllers\AdminControllerBase.cs" />
     <Compile Include="Extensions\ActionResultExtensions.cs" />
+    <Compile Include="Extensions\HtmlTailExtensions.cs" />
     <Compile Include="Filters\JsonNetAttribute.cs" />
     <Compile Include="Localization\SetWorkingCultureAttribute.cs" />
     <Compile Include="Modelling\Results\JsonNetResult.cs" />
