--- a/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
@@ -2,6 +2,13 @@
 <Theme title="Alpha" supportRTL="false" previewText="The 'Alpha' theme" author="SmartStore AG" version="1.0">
 
   <Vars>
+    <!-- Brand Colors -->
+    <Var name="brand-primary" type="Color">#3f51b5</Var>
+    <Var name="brand-warning" type="Color">#ff9800</Var>
+    <Var name="brand-danger" type="Color">#f44336</Var>
+    <Var name="brand-info" type="Color">#5bc0de</Var>
+    <Var name="brand-success" type="Color">#5cb85c</Var>
+    
     <!-- Common Colors -->
     <Var name="SiteBackground" type="Color">#eaf0f4</Var>
     <Var name="BodyBackground" type="Color">#fff</Var>
