--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -451,6 +451,10 @@
     <Compile Include="Migrations\201701251835419_SpecificationAttributeAlias.Designer.cs">
       <DependentUpon>201701251835419_SpecificationAttributeAlias.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702061557351_DefaultDeliveryTime.cs" />
+    <Compile Include="Migrations\201702061557351_DefaultDeliveryTime.Designer.cs">
+      <DependentUpon>201702061557351_DefaultDeliveryTime.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -826,6 +830,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701251835419_SpecificationAttributeAlias.resx">
       <DependentUpon>201701251835419_SpecificationAttributeAlias.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702061557351_DefaultDeliveryTime.resx">
+      <DependentUpon>201702061557351_DefaultDeliveryTime.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
